--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.16.4",
     "@astrojs/tailwind": "^3.1.1",
     "astro": "^2.1.6",
     "tailwindcss": "^3.2.7"
