--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/image": "^0.16.4",
+    "@astrojs/react": "^2.1.1",
     "@astrojs/tailwind": "^3.1.1",
     "astro": "^2.1.6",
     "tailwindcss": "^3.2.7"
